# LightingVisualiser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: depends.cmake
cmake/modules/: FindOLA.cmake
demo/: demo.vis  gel.colours
demo/shaders/: ambient_light.vert  geometry.vert  simple_scene_light.frag  simple_scene_object.frag  simple_scene_object.vert  spot_light.frag  spot_light.vert
docs/: gelcoloursspec.md  showfilespec.md
libvisualiser/: CMakeLists.txt  make_unique.h
libvisualiser/include/libvisualiser/: AbstractFramebuffer.h  ColourManager.h  DMXListener.h  GeometryBuffer.h  IRenderable.h  LightManager.h  LightingRig.h  Mesh.h  Model.h  PostProcessBuffer.h  Renderer.h  ShowFileLoader.h  Stage.h  Visualiser.h  VisualiserCore.h
libvisualiser/libs/: stb_image.h
libvisualiser/src/: AbstractFramebuffer.cpp  BoostLogDestination.cpp  BoostLogDestination.h  Camera.cpp  ColourManager.cpp  DMXListener.cpp  GeometryBuffer.cpp  LightManager.cpp  LightingRig.cpp  Mesh.cpp  Model.cpp  PostProcessBuffer.cpp  Renderer.cpp  ShaderProgram.cpp  ShadowBuffer.cpp  ShowFileLoader.cpp  Stage.cpp  Texture.cpp  Visualiser.cpp  VisualiserCore.cpp
libvisualiser/visualiser/: ColourManager.cpp  Constants.h  ShowFileLoader.cpp  ShowFileLoader.h  Visualiser.cpp
libvisualiser/visualiser/lighting/: DMXListener.cpp  LightManager.cpp  LightManager.h  LightingRig.cpp  LightingRig.h
libvisualiser/visualiser/rendering/: AbstractFramebuffer.cpp  Camera.cpp  Camera.h  GeometryBuffer.cpp  IUpdatable.h  PostProcessBuffer.cpp  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  ShadowBuffer.cpp  ShadowBuffer.h
libvisualiser/visualiser/stage/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Stage.cpp  Texture.cpp  Texture.h
shaders/: ambient_light.frag  generate_shadow_map.vert  geometry.frag  point_light.frag  simple_scene_light.geom  simple_scene_light.vert
visualiser/: CMakeLists.txt
visualiser/src/: main.cpp
